--- a/spe_blog/templates/spe_blog/plugins/issue_sidebar.html
+++ b/spe_blog/templates/spe_blog/plugins/issue_sidebar.html
@@ -15,17 +15,15 @@
             </div>
         </div>
     </a>
-    {% if issue.subscribe_url %}
-        <p></p>
-        <a href="{{ issue.subscribe_url }}">
-        <button type="button" class="btn btn-success btn-block">Subscribe</button>
-        </a>
-    {% endif %}
     </article>
 {#    {% endif %}#}
 {% empty %}
     <p class="well">{% trans "No items available" %}</p>
 {% endfor %}
+
+{% if show_subscribe_url %}
+    <a href="{{ show_subscribe_url }}"><button type="button" class="btn btn-success btn-block">Subscribe</button></a>
+{% endif %}
 
 {% if show_all_url and show_all_text %}
     <a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span></a>
