--- a/mainsite/templates/plugins/title_plugin.html
+++ b/mainsite/templates/plugins/title_plugin.html
@@ -1,4 +1,7 @@
+<head>
+    <link rel="stylesheet" type="text/css" media="all" href="/static/animate/css/animate.css">
+</head>
 <div>
-    <hr style="height:5px;border:none;color:#333;background-color:#333;">
-    <h1>{{ title }}</h1>
+    <hr class="animated hinge" style="height:5px;border:none;color:#333;background-color:#333;">
+    <h1 class="animated hinge">{{ title }}</h1>
 </div>
