--- a/mainsite/static/ogf/css/_ogfheader.scss
+++ b/mainsite/static/ogf/css/_ogfheader.scss
@@ -1,95 +1,97 @@
+/* =================================================================== */
+/* OGF HEADER & MENUS
+====================================================================== */
 @import 'vars';
 
 /* ********************************** */
 /* AD Zone 1 */
 #adLeaderboard {
-  height: 140px;
-  padding: 27px 0 0 0;
+  height:               140px;
+  padding:              27px 0 0 0;
 }
 #adLeaderboardImg {
-  margin: auto;
+  margin:               auto;
 }
 
 /* ********************************** */
 /* TOP BAR BLACK */
 #topbar {
-  background-color: $col-ogfred;
-  min-height: 50px;
-  color:$col-white;
-  font-weight:$font-bold;
+  background-color:     $col-ogfred;
+  min-height:           50px;
+  color:                $col-white;
+  font-weight:          $font-bold;
 
   .topbarcol {
-    //padding: 18px 0 0 0;
-    //font-size: 12px;
+
   }
 
   .topbarmenuleft {
-    list-style-type: none;
-    padding: 14px 0 0 0;
-    overflow: hidden;
-    font-size:14px;
+    list-style-type:    none;
+    padding:            14px 0 0 0;
+    overflow:           hidden;
+    font-size:          14px;
 
     li {
-      float: left;
+      float:            left;
     }
 
     li a {
-      display: block;
-      color: $col-menuwhite;
-      text-align: center;
-      padding: 0 15px;
-      text-decoration: none;
+      display:          block;
+      color:            $col-menuwhite;
+      text-align:       center;
+      padding:          0 15px;
+      text-decoration:  none;
     }
 
     li a:hover {
-      color: $col-ogfyellow;
+      color:            $col-ogfyellow;
     }
 
   }
 
   .topbarmenuright {
-    float:right;
-    font-size:20px;
-    list-style-type: none;
-    padding: 13px 0 0 0;
-    overflow: hidden;
+    float:              right;
+    font-size:          20px;
+    list-style-type:    none;
+    padding:            13px 0 0 0;
+    overflow:           hidden;
 
     li {
-      float: left;
-      margin-top: -4px;
+      float:            left;
+      margin-top:       -4px;
     }
 
     li a {
-      display: block;
-      color: $col-menuwhite;
-      text-align: center;
-      padding: 0 10px;
-      text-decoration: none;
+      display:          block;
+      color:            $col-menuwhite;
+      text-align:       center;
+      padding:          0 10px;
+      text-decoration:  none;
     }
 
     li a:hover {
-      color: $col-ogfyellow;
+      color:            $col-ogfyellow;
     }
 
   }
 
   #signin {
-    background-color: $col-red;
-    height:50px;
-    font-size:14px;
-    text-align: center;
-    padding:14px 0 0 0;
+    background-color:   $col-red;
+    height:             50px;
+    font-size:          14px;
+    text-align:         center;
+    padding:            14px 0 0 0;
 
     a {
-      color:$col-menuwhite;
-      text-decoration: none;
+      color:            $col-menuwhite;
+      text-decoration:  none;
     }
 
     &:hover {
-      background-color:$col-white;
+      background-color: $col-white;
 
       a {
-        color: $col-ogfred;
+        color:          $col-ogfred;
       }
     }
   }
@@ -99,53 +101,50 @@
 /* ********************************** */
 /* LOGO MENU BAR GREY                 */
 #menubar {
-  background-color: $col-ogfblue;
-  min-height: 170px;
+  background-color:     $col-ogfblue;
+  min-height:           170px;
 
   #mainLogo {
-    padding-top:50px;
+    padding-top:        50px;
 
     img {
-      max-width:300px;
-      height:auto;
+      max-width:        300px;
+      height:           auto;
     }
   }
 
   .pubMenu {
-    list-style-type: none;
-    margin: 0;
-    padding: 80px 0 0 0;
-    font-size: 18px;
-    float: right;
+    list-style-type:    none;
+    margin:             0;
+    padding:            80px 0 0 0;
+    font-size:          18px;
+    float:              right;
 
     li {
-      float: left;
-      padding: 0 0 0 30px;
+      float:            left;
+      padding:          0 0 0 30px;
     }
 
     li a {
-      display: block;
-      color: $col-menuwhite;
-      text-align: center;
-      text-decoration: none;
-      font-weight:$font-bold;
+      display:          block;
+      color:            $col-menuwhite;
+      text-align:       center;
+      text-decoration:  none;
+      font-weight:      $font-bold;
     }
 
     li a:hover {
-      color: $col-ogfyellow;
+      color:            $col-ogfyellow;
     }
   }
-
 }
-
 .searchIcon {
   &:hover {
-    color: $col-ogfred;
-    cursor: pointer;
+    color:              $col-ogfred;
+    cursor:             pointer;
   }
 }
-
 .searchbar {
-  background-color: $col-ogfnotsolightgrey;
-  padding:3px 0;
+  background-color:     $col-ogfnotsolightgrey;
+  padding:              3px 0;
 }
