--- a/mainsite/static/speorg/css/_tiles.scss
+++ b/mainsite/static/speorg/css/_tiles.scss
@@ -109,16 +109,16 @@
 
 
 
-// background: #000 url(image.gif) no-repeat top left fixed;
-.demoback {
-  background-image: url("img_tree.png");
-  background-repeat: no-repeat;
-  background-position: right top;
-  background-size: 100% 100%;
-  margin-right: 200px;
-}
-.demoback2 {
-  background: url("img_tree.png") no-repeat right top;
-  background-size: 100% 100%;
-  margin-right: 200px;
-}
+//// background: #000 url(image.gif) no-repeat top left fixed;
+//.demoback {
+//  background-image: url($img-);
+//  background-repeat: no-repeat;
+//  background-position: right top;
+//  background-size: 100% 100%;
+//  margin-right: 200px;
+//}
+//.demoback2 {
+//  background: url("img_tree.png") no-repeat right top;
+//  background-size: 100% 100%;
+//  margin-right: 200px;
+//}
