--- a/mainsite/templates/plugins/title_plugin.html
+++ b/mainsite/templates/plugins/title_plugin.html
@@ -1,4 +1,4 @@
 <div>
-    <hr style="height:5px;border:none;color:#333;background-color:#333;">
-    <h1>{{ title }}</h1>
+    <hr class="tiletitlehr">
+    <h1 class="tiletitles">{{ title }}</h1>
 </div>
