Updated static pathing for OGF

--- a/mainsite/templates/ogf_base.html
+++ b/mainsite/templates/ogf_base.html
@@ -9,7 +9,7 @@
 {% block css_base %}
     {% load staticfiles %}
     <!-- CSS_BASE -->
-    <link rel="stylesheet" type="text/css" media="all" href="{% static 'ogf/css/ogf-styles.css' %}" />
+    <link rel="stylesheet" type="text/css" media="all" href="{% static 'ogf/css/mainstyle.css' %}" />
 {% endblock css_base %}
 
 {% block wrap_begin %}<div class="container-fluid">{% endblock wrap_begin %}
