--- a/mainsite/templates/ogf_home.html
+++ b/mainsite/templates/ogf_home.html
@@ -6,20 +6,14 @@
 {% block content %}
     <div class="row content-area">
 
-        <div class="col-sm-7 col-sm-push-4 col-md-push-3 col-md-6 homepage-features">
+        <div class="col-sm-8 col-lg-7 col-lg-offset-1 homepage-features">
 
             {% placeholder "notice" %}
             {% placeholder "content" %}
 
         </div>
-        <div class="col-sm-3 col-sm-offset-1 col-sm-pull-7 col-md-2 col-md-pull-6" id="notices-ads">
-
+        <div class="col-sm-3 spe-content">
             {% placeholder "aside" %}
-
-        </div>
-
-        <div class="col-sm-10 col-sm-offset-1 col-md-2 col-md-offset-0 spe-content">
-
             {% placeholder "additional-content" %}
 
         </div>
