--- a/spe_blog/templates/spe_blog/plugins/picture_with_text_below.html
+++ b/spe_blog/templates/spe_blog/plugins/picture_with_text_below.html
@@ -2,13 +2,13 @@
 
 {% for article in articles %}
 {#    {% if instance.hide_featured and not article.is_featured %}#}
-    <article class="tile whiteback story{% if not article.published %} unpublished{% endif %}{% if article.future %} future{% endif %}"
+    <article class="col-sm-6 tile-textbelow story{% if not article.published %} unpublished{% endif %}{% if article.future %} future{% endif %}"
                 style="min-height: 150px">
     <a href="{{ article.get_absolute_url }}" target="_blank">
         <div class="story-wrap">
             {% if article.picture and article.picture.url %}
-                <figure class="thumb" style="max-width:200px;">
-                    <div class="img-wrap"><img src="{{ article.picture.url }}" style="max-height:150px;max-width: 200px"/></div>
+                <figure class="thumb">
+                    <div class="img-wrap"><img src="{{ article.picture.url }}" class="img-responsive"/></div>
                 </figure>
             {% endif %}
             <div class="story-text">
