--- a/spe_blog/templates/spe_blog/issues.html
+++ b/spe_blog/templates/spe_blog/issues.html
@@ -1,6 +1,8 @@
-{% load i18n %}
+{% extends "base.html" %}
 
-{% for issue in issues %}
+{% block content %}
+    -- issues --
+    {% for issue in issues %}
     <article class="tile whiteback story"
                 style="min-height: 150px">
     <a href="{{ issue.issue_url }}" target="_blank">
@@ -16,11 +18,13 @@
         </div>
     </a>
     </article>
-{#    {% endif %}#}
-{% empty %}
-    <p class="well">{% trans "No issues available" %}</p>
-{% endfor %}
+    {#    {% endif %}#}
+    {% empty %}
+        <p class="well">No issues available</p>
+    {% endfor %}
 
-{% if show_all_url and show_all_text %}
-    <a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span></a>
-{% endif %}
+    {% if show_all_url and show_all_text %}
+        <a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span></a>
+    {% endif %}
+
+{% endblock content %}
