--- a/spe_blog/templates/spe_blog/plugins/issue_sidebar.html
+++ b/spe_blog/templates/spe_blog/plugins/issue_sidebar.html
@@ -18,7 +18,7 @@
     </article>
 {#    {% endif %}#}
 {% empty %}
-    <p class="well">{% trans "No items available" %}</p>
+    <p class="well">{% trans "No issues available" %}</p>
 {% endfor %}
 
 {% if show_subscribe_url %}
