--- a/spe_blog/templates/spe_blog/detail.html
+++ b/spe_blog/templates/spe_blog/detail.html
@@ -1,6 +1,9 @@
--- detail --
 <h1>{{ article.title }}</h1>
 <img src={{article.picture.url}} class="img-rounded" alt={{article.alternate}} width="600" height="400">
 <h2>by: {{ article.author }}</h2>
 <h3>{{ article.date }}</h3>
 {{ article.article_text | safe }}
+
+{% if article.publication.code != "WWW" %}
+    {% include "spe_blog/plugins/issue_sidebar.html" %}
+{% endif %}
