--- a/spe_blog/templates/spe_blog/plugins/issue_sidebar.html
+++ b/spe_blog/templates/spe_blog/plugins/issue_sidebar.html
@@ -1,6 +1,7 @@
 {% load i18n %}
 
 {% for issue in issues %}
+  {% if forloop.first %}
     <article class="tile whiteback story"
                 style="min-height: 150px">
     <a href="{{ issue.issue_url }}" target="_blank">
@@ -16,15 +17,11 @@
         </div>
     </a>
     </article>
-{#    {% endif %}#}
+  {% endif %}
 {% empty %}
     <p class="well">{% trans "No issues available" %}</p>
 {% endfor %}
 
 {% if show_subscribe_url %}
     <a href="{{ show_subscribe_url }}"><button type="button" class="btn btn-success btn-block">Subscribe</button></a>
-{% endif %}
-
-{% if show_all_url and show_all_text %}
-    <a class="see-all" id="features" href="{{ show_all_url }}">{{ show_all_text }}<span></span></a>
 {% endif %}
