Updated Feature and Editorial classes plus mixed fixes

--- a/mainsite/static/ogf/css/_ogfcontent.scss
+++ b/mainsite/static/ogf/css/_ogfcontent.scss
@@ -514,3 +514,10 @@
     }
   }
 }
+
+.featurecol, .editorialcol, .areaContent, .areaRightSide {
+  padding:0;
+}
+.areaContent {
+  padding-right:15px;
+}
