--- a/mainsite/templates/ogf_base.html
+++ b/mainsite/templates/ogf_base.html
@@ -16,9 +16,12 @@
 
 {% block content_header %}
     <!-- HEADER Begin -->
-        <div class="row">
-            <div class="col-md-12" id="adLeaderboard">
-                <img id="adLeaderboardImg" src="http://dummyimage.com/728x90/591c59/703870.png&text=800+x+600+AdZone1" class="img-responsive">
+        <div class="row" id="adRow1">
+            <div class="col-md-12 text-center" id="adLeaderboard">
+{#                <img id="adLeaderboardImg" src="http://dummyimage.com/728x90/591c59/703870.png&text=800+x+600+AdZone1" class="img-responsive">#}
+                <!-- AdSpeed.com Tag 8.0.2 for [Zone] OGF 1 728x90 [Any Dimension] -->
+                <script type="text/javascript" src="http://g.adspeed.net/ad.php?do=js&zid=79084&oid=7699&wd=-1&ht=-1&target=_blank"></script>
+                <!-- AdSpeed.com End -->
             </div>
         </div>
 
