--- a/mainsite/templates/z_boostrap_size_indicator.html
+++ b/mainsite/templates/z_boostrap_size_indicator.html
@@ -3,11 +3,20 @@
 {% if variables.DEBUG == True %}
     {% addtoblock "css" %}
         <style>
+            .sizeblock {
+                background-color:white;
+                height:55px;
+                width:80px;
+                position:fixed;
+                left:25px;
+                bottom:5px;
+                border: 1px solid lightgrey;
+            }
             .sizeIndicator {
                 z-index: 10000;
                 position: fixed;
                 bottom:20px;
-                right:30px;
+                left:30px;
                 font-size:30px;
                 font-weight:700;
                 color:hotpink;
@@ -16,18 +25,20 @@
                 z-index: 10000;
                 position: fixed;
                 bottom:10px;
-                right:30px;
+                left:30px;
                 font-size:10px;
                 font-weight:700;
-                color:purple;
+                color:rebeccapurple;
             }
         </style>
     {% endaddtoblock %}
-    <div class="visible-xs sizeIndicator">xs</div>
-    <div class="visible-sm sizeIndicator">sm</div>
-    <div class="visible-md sizeIndicator">md</div>
-    <div class="visible-lg sizeIndicator">lg</div>
-    <div class="pxSize">pixels</div>
+    <div class="sizeblock">
+        <div class="visible-xs sizeIndicator">xs</div>
+        <div class="visible-sm sizeIndicator">sm</div>
+        <div class="visible-md sizeIndicator">md</div>
+        <div class="visible-lg sizeIndicator">lg</div>
+        <div class="pxSize">pixels</div>
+    </div>
 
     {% addtoblock "js" %}
         <script type="text/javascript" charset="utf-8">
