--- a/mainsite/static/ogf/css/mainstyle.scss
+++ b/mainsite/static/ogf/css/mainstyle.scss
@@ -29,6 +29,7 @@ h1, h2, h3, h4 {
 @import 'ogffooter';
 @import 'ogfcontent';
 @import 'tiles';
+@import 'adzones';
 
 /* ************************************ */
 /* MISC  */
