--- a/mainsite/static/ogf/css/mainstyle.scss
+++ b/mainsite/static/ogf/css/mainstyle.scss
@@ -22,6 +22,9 @@ h1, h2, h3, h4 {
   //margin:0 !important;
   margin:                 0;
 }
+.container-fluid {
+  padding:0;
+}
 
 /* ************************ */
 /* HEAD FOOT & CONTENT      */
