--- a/mainsite/static/ogf/css/_ogffooter.scss
+++ b/mainsite/static/ogf/css/_ogffooter.scss
@@ -4,6 +4,7 @@
   background-color:   $col-ogfblue;
   font-family:        $font-titles;
   padding:            30px;
+  margin:             30px 0 0 0;
 }
 .footerLower {
   background-color:   $col-ogfblack;
