--- a/mainsite/static/ogf/css/_tiles.scss
+++ b/mainsite/static/ogf/css/_tiles.scss
@@ -175,6 +175,35 @@
     font-size:          10px;
   }
   a {
-    color:              $col-ogfyellow;
+    color:$col-white;
   }
+
+}
+.tile-curntIssue {
+  min-height:           150px;
+
+  box-shadow:           0 1px 2px $col-boxshadow;
+  margin-bottom:        20px;
+  padding:              15px;
+
+  a {
+    color:                $col-ogfblack;
+  }
+
+  .issueThumb {
+    min-height:         150px;
+    padding:            0;
+  }
+  .pub-date, .volume, .number {
+    font-weight:        $font-bold;
+  }
+  .pub-date {
+    font-size: 20px;
+    margin-bottom:20px;
+  }
+  .btn {
+    background-color:   $col-ogfblue;
+    color:              $col-white;
+  }
+
 }
