--- a/mainsite/static/ogf/css/_adzones.scss
+++ b/mainsite/static/ogf/css/_adzones.scss
@@ -34,3 +34,10 @@
 .adZone6 {
   padding: 15px;
 }
+
+.tile-adspeed {
+  box-shadow:           0 1px 2px $col-boxshadow;
+  margin-bottom:        20px;
+  padding:              15px;
+  background-color:     $col-ogflightgrey;
+}
