--- a/mainsite/static/ogf/css/mainstyle.css
+++ b/mainsite/static/ogf/css/mainstyle.css
@@ -351,6 +351,8 @@ h1, h2, h3, h4 { font-family: "proxima-nova", sans-serif; font-weight: 700; }
 
 .adZone6 { padding: 15px; }
 
+.tile-adspeed { box-shadow: 0 1px 2px #b4b4b9; margin-bottom: 20px; padding: 15px; background-color: #f2efea; }
+
 /* ************************************ */
 /* MISC  */
 .red { color: #d92226 !important; }
