--- a/spe_blog/templates/spe_blog/plugins/person_of_interest.html
+++ b/spe_blog/templates/spe_blog/plugins/person_of_interest.html
@@ -2,17 +2,14 @@
 
 {% for article in articles %}
 {#    {% if instance.hide_featured and not article.is_featured %}#}
-    <article class="tile whiteback story{% if not article.published %} unpublished{% endif %}{% if article.future %} future{% endif %}"
-                style="min-height: 150px">
+    <article class="tile-poi col-sm-6 {% if not article.published %}unpublished{% endif %}{% if article.future %} future{% endif %}">
     <a href="{{ article.get_absolute_url }}" target="_blank">
-        <div class="story-wrap">
-            {% if article.picture and article.picture.url %}
-                <figure class="thumb" style="max-width:200px;">
-                    <div class="img-wrap"><img src="{{ article.picture.url }}" style="max-height:150px;max-width: 200px"/></div>
-                </figure>
-            {% endif %}
-            <div class="story-text">
-                <span class="pub-date">{{ article.date }}</span>
+        <div class="story-wrap row">
+            <div class="col-sm-3 poipic">
+                {% if article.picture and article.picture.url %}<img src="{{ article.picture.url }}" class="img-responsive"/>
+                {% endif %}
+            </div>
+            <div class="col-sm-9 poiblurb">
                 <h3>{{ article.title }}</h3>
                 <p>{{ article.teaser }}</p>
             </div>
