--- a/mainsite/static/ogf/css/_tiles.scss
+++ b/mainsite/static/ogf/css/_tiles.scss
@@ -4,7 +4,7 @@
 @import 'vars';
 
 .tile, .tile-blue, .tile-white, .tile-alert {
-  box-shadow:           0 1px 2px $col-boxshadow;
+  //box-shadow:           0 1px 2px $col-boxshadow;
   margin-bottom:        20px;
   padding:              15px;
   min-width:            150px;
@@ -182,7 +182,7 @@
 .tile-curntIssue {
   min-height:           150px;
 
-  box-shadow:           0 1px 2px $col-boxshadow;
+  //box-shadow:           0 1px 2px $col-boxshadow;
   margin-bottom:        20px;
   padding:              15px;
 
