Fixed crossover styling

--- a/spe_blog/templates/spe_blog/plugins/issue_sidebar.html
+++ b/spe_blog/templates/spe_blog/plugins/issue_sidebar.html
@@ -7,7 +7,7 @@
         <div class="col-xs-5 issueThumb">
             <img src="{{ issue.cover.url }}" class="img-responsive"/>
         </div>
-        <div class="col-xs-7">
+        <div class="col-xs-7 padZero">
             <div class="pub-date">{{ issue.date }}</div>
             <div class="volume">Volume: {{ issue.print_volume }}</div>
             <div class="number">Issue: {{ issue.print_issue }}</div>
