--- a/mainsite/static/www/css/_tiles.scss
+++ b/mainsite/static/www/css/_tiles.scss
@@ -45,7 +45,6 @@
 .whiteback, .tile-white {
     background-color:   $col-white;
   }
-
 .link-box, .tile-links {
   border-top: 4px solid $col-speblue2;
   background-color:     $col-white;
@@ -130,22 +129,29 @@
 .tile-curntIssue {
   min-height:           150px;
   margin-bottom:        20px;
-  padding:              0;
+  padding:              5px;
+  box-shadow:           0 1px 2px $col-boxshadow;
+  background-color:     $col-white;
 
   a {
     color:              $col-speblack;
   }
 
   .issueThumb {
-    min-height:         150px;
-    padding:            0;
+    min-height:         100px;
+    padding:            10px 5px 0 0;
   }
   .pub-date, .volume, .number {
     font-weight:        $font-bold;
   }
   .pub-date {
-    font-size:          20px;
-    margin-bottom:      20px;
+    padding-top:        10px;
+    font-size:          15px;
+    margin-bottom:      15px;
+    white-space:        nowrap;
+  }
+  .volume, .number {
+    font-size:          10px;
   }
   .btn {
     background-color:   $col-speblue;
@@ -167,7 +173,48 @@
   padding-bottom:       10px;
   margin-bottom:        15px;
 }
+.tile-poi {
+  padding:              15px;
+  background-color:     $col-lightgrey;
 
+  .poipic {
+    padding:            0;
+  }
+  .poiblurb {
+    color:              $col-speblack;
+    h3 {
+      font-size:        15px;
+      font-weight:      $font-bold;
+      margin:           0;
+    }
+    p {
+      font-size:        12px;
+    }
+  }
+}
+#myCarousel {
+  .carousel-indicators {
+    bottom: 0;
+  }
+
+  .carousel-inner {
+    height:             360px;
+
+    .item {
+      img {
+        width:          100%;
+        height:         auto;
+      }
+      .carousel-caption {
+        background:     $img-back-black-50 repeat top left fixed;
+        width:          100%;
+        top: 200px;
+        left: 0;
+        padding-bottom: 30px;
+      }
+    }
+  }
+}
 
 
 //// background: #000 url(image.gif) no-repeat top left fixed;
