--- a/mainsite/static/www/css/mainstyle.scss
+++ b/mainsite/static/www/css/mainstyle.scss
@@ -42,3 +42,9 @@ body {
 .pinkBorder {
     border:       1px solid pink;
 }
+.padZero {
+  padding:        0;
+}
+.margZero {
+  margin:         0;
+}
