--- a/spe_blog/templates/spe_blog/plugins/person_of_interest.html
+++ b/spe_blog/templates/spe_blog/plugins/person_of_interest.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 {% if articles.count > 1 %}
-    <div class="row" style="margin-bottom:25px;">
+    <div class="row greyback" style="margin-bottom:25px;">
 {% endif %}
 
 {% for article in articles %}
